# northwind-api

./: .gitignore  Cargo.toml  README.md  northwind_config.yaml.example
apps/api/: Cargo.toml
apps/api/src/: main.rs
crates/customers/: Cargo.toml
crates/customers/src/: lib.rs
crates/customers/src/api/: mod.rs  router.rs
crates/customers/src/api/dto/: mod.rs
crates/customers/src/api/handlers/: list_customers.rs  mod.rs
crates/customers/src/domain/: mod.rs
crates/customers/src/repository/: mod.rs
crates/customers/src/service/: mod.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  macros.rs
crates/platform/src/configuration/: mod.rs
crates/platform/src/conversion/: dto.rs
crates/platform/src/database/: db_pool.rs  mod.rs
crates/platform/src/errors/: app_error.rs
crates/platform/src/pagination/: cursor.rs  mod.rs  page.rs
crates/platform/src/standard_response/: error_response.rs  mod.rs
migrations/: 20260310212509_create_customers.sql
