[workspace]
resolver = "3"
members = ["apps/api", "crates/customers", "crates/platform"]

[workspace.dependencies]
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "chrono",
    "bigdecimal",
] }
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
secrecy = { version = "0.10.3", features = ["serde"] }