[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
customers = { version = "0.1.0", path = "../../crates/customers" }
dotenv = "0.15.0"
platform = { version = "0.1.0", path = "../../crates/platform" }
tower-http = { version = "0.6.8", features = ["cors"] }